# toptastic-data

./: .gitignore  20110313.json  README.md  download.py  pyproject.toml  requirements.txt  run.py  songs.db  syncdb.py  toptastic-api.py  youtube.py
.github/: dependabot.yml
misc/: Notes.txt  convert-db.py  toptastic.py  youtube.py
my_app/: toptastic_api.py  youtube.py
tests/: test_compare_db_to_scraper.py  test_create_playlist.py  test_get_playlist.py  test_scraper.py
