[project]
name = "toptastic-data"
version = "0.1.0"
description = "Toptastic data scraping and API utilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4==4.14.3",
    "certifi==2026.5.20",
    "flask==3.1.3",
    "gitpython==3.1.50",
    "google-api-python-client==2.197.0",
    "google-auth-oauthlib==1.3.1",
    "protobuf==6.33.6",
    "pytest==8.4.2",
    "python-dateutil==2.9.0.post0",
    "pytube==15.0.0",
    "requests==2.34.2",
]

[tool.uv]
package = false
